@@ -38,7 +38,7 @@ public class CoreDescriptor {
   private final CoreContainer coreContainer;
   private Properties coreProperties;
   private boolean loadOnStartup = true;
-  private boolean swappable = false;
+  private boolean isTransient = false;
 
 
   private CloudDescriptor cloudDesc;
@@ -219,12 +219,12 @@ public class CoreDescriptor {
     this.loadOnStartup = loadOnStartup;
   }
 
-  public boolean isSwappable() {
-    return swappable;
+  public boolean isTransient() {
+    return isTransient;
   }
 
-  public void setSwappable(boolean swappable) {
-    this.swappable = swappable;
+  public void setTransient(boolean aTransient) {
+    this.isTransient = aTransient;
   }
 
   public String getUlogDir() {
